objects/LLC_BI__Transaction_Request__c.object
<CustomObject>
    <description>An object to store transaction requests.</description>
    <fields>
        <fullName>LLC_BI__Additional_Federal_Withholding_Pct__c</fullName>
        <description>This field is optional. The additional percentage (over and above the 10% federal income tax withholding) that the IRA owner will have withheld from the distribution.</description>
        <inlineHelpText>The additional percentage (over and above the 10% Federal income tax withholding) that the IRA owner will have withheld from the distribution.</inlineHelpText>
        <label>Additional Federal Withholding Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Additional_Federal_Withholdings__c</fullName>
        <description>This field is optional. Where an initial 10% federal income tax withholding is already presumed to apply to the transaction, this is the additional discretionary dollar amount, if any, over and above the baseline 10%, that the IRA plan owner or distribution recipient elects to have withheld from the distribution.</description>
        <inlineHelpText>The additional discretionary dollar amount of federal withholdings, over and above the baseline 10%, to the IRA plan.</inlineHelpText>
        <label>Additional Federal Withholdings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Funded__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This field is optional. It is the total funded amount approved for this transaction.</description>
        <label>Amount Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Requested__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This field is optional. It is the total amount requested for this transaction request.</description>
        <label>Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount__c</fullName>
        <description>This field is optional. It is the amount of the transaction request.</description>
        <inlineHelpText>The amount of the transaction request</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CESA_Distribution_Type__c</fullName>
        <description>This field is optional. It is the picklist that specifies the type of distribution for a Coverdell Education Savings Account (CESA).</description>
        <inlineHelpText>Specifies the type of distribution for a Coverdell Education Savings Account (CESA).</inlineHelpText>
        <label>CESA Distribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distributions - Non Transfer</fullName>
                </value>
                <value>
                    <fullName>Distributions - Transfer to CESA of same Designated Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Distributions - Transfer to CESA of new qualified designated beneficiary</fullName>
                </value>
                <value>
                    <fullName>Distributions - Transfer to former spouse&apos;s CESA due to divorce or legal separation</fullName>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution in same year as excess contribution</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution in year after excess contribution but by May 31</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution after May 31 of the tax year after excess contribution</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Prohibited Transaction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__CESA_Earnings_Amount__c</fullName>
        <description>This field is optional. It is the portion of the CESA transfer that is considered the earnings amount.</description>
        <inlineHelpText>The portion of the (CESA) transfer that is considered the earnings amount.</inlineHelpText>
        <label>CESA Earnings Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CESA_Transfer_Basis_Amount__c</fullName>
        <description>This field is optional. It is the portion of the CESA transfer that is considered the basis amount.</description>
        <inlineHelpText>The portion of the (CESA) transfer that is considered the basis amount.</inlineHelpText>
        <label>CESA Transfer Basis Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Completed_Date__c</fullName>
        <description>This field is optional. It is the date and time that this transaction request was completed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contribution_Amount__c</fullName>
        <description>This field is optional. It is the amount of the IRA/HSA contribution.</description>
        <inlineHelpText>The amount of the IRA/HSA contribution.</inlineHelpText>
        <label>Contribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contribution_Plus_Earnings_Amount__c</fullName>
        <description>This field is optional. It is the amount of contribution plus earnings.</description>
        <inlineHelpText>The amount of contribution plus earnings.</inlineHelpText>
        <label>Contribution Plus Earnings Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contribution_Tax_Year__c</fullName>
        <description>This field is optional. It is the tax year of the IRA/HSA contribution.</description>
        <inlineHelpText>The tax year of the IRA/HSA contribution.</inlineHelpText>
        <label>Contribution Tax Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contribution_Type__c</fullName>
        <description>This field is optional. It is a picklist that describes the IRA Contribution Type.</description>
        <inlineHelpText>The IRA Contribution Type</inlineHelpText>
        <label>Contribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular (including Catch-Up)</fullName>
                </value>
                <value>
                    <fullName>Rollover from an HSA</fullName>
                </value>
                <value>
                    <fullName>Transfer from an HSA</fullName>
                </value>
                <value>
                    <fullName>Return of Mistaken Distribution</fullName>
                </value>
                <value>
                    <fullName>Rollover from an Archer Medical Savings Account</fullName>
                </value>
                <value>
                    <fullName>Transfer from an Archer Medical Savings Account</fullName>
                </value>
                <value>
                    <fullName>Regular CESA Contribution</fullName>
                </value>
                <value>
                    <fullName>Rollover to CESA of Same Designated Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Rollover to CESA of a New Qualified Designated Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Transfer to CESA of Same Designated Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Transfer to CESA of a New Qualified Designated Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Rollover of Military Death Gratuity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Delivery_Payment_Description__c</fullName>
        <description>This field is optional. It is the a description of how the individual should be referenced on the check or certificate registration.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is a description of how the individual should be referenced on the check or certificate registration.</inlineHelpText>
        <label>Delivery Payment Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Delivery_Payment_Options__c</fullName>
        <description>This field is optional. It is a picklist that describes the possible medium for the payment/transfer requested.</description>
        <inlineHelpText>Description of possible medium(s) for the payment/transfer requested.</inlineHelpText>
        <label>Delivery Payment Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check payable to or certificate registration in the name of</fullName>
                </value>
                <value>
                    <fullName>Check payable to</fullName>
                </value>
                <value>
                    <fullName>Check or electronic fund transfer payable to</fullName>
                </value>
                <value>
                    <fullName>Certificate registration in the name of</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Basis_Amount__c</fullName>
        <description>This field is optional. It is the deposit basis amount of the CESA contribution. The basis amount equals the amount of the rollover or transfer contribution.</description>
        <inlineHelpText>The deposit basis amount of the (CESA) contribution. The basis amount equals the amount of the rollover or transfer contribution.</inlineHelpText>
        <label>Deposit Basis Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Earnings_Amount__c</fullName>
        <description>This field is optional. It is the deposit earnings amount of the CESA contribution.</description>
        <inlineHelpText>The deposit earnings amount of the (CESA) contribution.</inlineHelpText>
        <label>Deposit Earnings Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. This field is a lookup to the deposit associated to the transaction request.</description>
        <label>Deposit</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Transaction Request</relationshipLabel>
        <relationshipName>Transaction_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Disbursement_Description__c</fullName>
        <description>Users manually populate this optional text field to indicate disbursement transaction details. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a description for the disbursement.</inlineHelpText>
        <label>Disbursement Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Disbursement_Payment_Method__c</fullName>
        <description>Users manually populate this optional picklist to indicate the payment method for the disbursement. By default, this field is blank.</description>
        <inlineHelpText>Select the payment method for the disbursement.</inlineHelpText>
        <label>Disbursement Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Retail Account</fullName>
                </value>
                <value>
                    <fullName>Draft/Check</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Distribution_Administration_Fee__c</fullName>
        <description>This field is optional. It is the amount of the administrative fees charged in connection with the distribution.</description>
        <inlineHelpText>The amount of the administrative fees charged in connection with the distribution.</inlineHelpText>
        <label>Distribution Administration Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Distribution_Amount__c</fullName>
        <description>This field is optional. It is the amount of the total distribution.</description>
        <inlineHelpText>The amount of the total distribution.</inlineHelpText>
        <label>Distribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Distribution_Basis_Amount__c</fullName>
        <description>This field is optional. For Coverdell Education Savings Account (CESA) distributions, this is the basis amount for the distribution.</description>
        <inlineHelpText>For Coverdell Education Savings Account (CESA) distributions this is the basis amount for the distribution.</inlineHelpText>
        <label>Distribution Basis Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Distribution_Earnings_Amount__c</fullName>
        <description>This field is optional. For Coverdell Education Savings Account (CESA) distributions, this is the earnings for the distribution.</description>
        <inlineHelpText>For Coverdell Education Savings Account (CESA) distributions this is the earnings for the distribution.</inlineHelpText>
        <label>Distribution Earnings Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Distribution_Payment_Method__c</fullName>
        <description>This field is optional. It is the picklist that specifies the payment method applicable to the distribution.</description>
        <inlineHelpText>Specifies the payment method applicable to the distribution.</inlineHelpText>
        <label>Distribution Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mail Check</fullName>
                </value>
                <value>
                    <fullName>Deposit into account with this financial organization</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Distribution_Subtotal__c</fullName>
        <description>This field is optional. It is the externally calculated subtotal dollar amount to print in the payment detail table on the distribution or election form.</description>
        <inlineHelpText>The externally calculated subtotal dollar amount to print in the payment detail table on the distribution or election form.</inlineHelpText>
        <label>Distribution Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Election_Of_Payment_Attached_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. If true, an election of payment already exists and a copy of the prior election is attached.</description>
        <inlineHelpText>If true an election of payment already exists and a copy of the prior election is attached.</inlineHelpText>
        <label>Election of Payment Attached Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Election_Of_Payment_Default_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. If true, the election of payment type selected is the default election that was made after the election deadline has passed.</description>
        <inlineHelpText>If true the election of payment type selected is the default election that was made after the election deadline has passed.</inlineHelpText>
        <label>Election of Payment Default Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Election_Of_Payment_Type__c</fullName>
        <description>This field is optional. It is a picklist that specifies the type of payment elected by the beneficiary or, in the case of a beneficiary IRA, the type of payment elected by the owner.</description>
        <inlineHelpText>Specifies the type of payment elected by the beneficiary or in the case of a beneficiary IRA the type of payment elected by the owner.</inlineHelpText>
        <label>Election of Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Treat As Own</fullName>
                </value>
                <value>
                    <fullName>Five Year Rule</fullName>
                </value>
                <value>
                    <fullName>Single Life Expectancy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Excess_Attributable_Earnings__c</fullName>
        <description>This field is optional. It is the amount of the earnings attributable to excess contribution. This only applies to distributions related to excess or recharacterized contributions.</description>
        <inlineHelpText>The amount of the earnings attributable to excess contribution. This only applies to distributions related to excess or recharacterized contributions.</inlineHelpText>
        <label>Excess Attributable Earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Excess_Contribution_Amount__c</fullName>
        <description>This field is optional. It is the amount of excess contribution related to the distribution.</description>
        <inlineHelpText>The amount of excess contribution related to the distribution.</inlineHelpText>
        <label>Excess Contribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Excess_Contribution_Tax_Year__c</fullName>
        <description>This field is optional. It is the tax year for which the excess contribution was made. This only applies to distributions related to excess or recharacterized contributions.</description>
        <inlineHelpText>The tax year for which the excess contribution was made. This only applies to distributions related to excess or recharacterized contributions.</inlineHelpText>
        <label>Excess Contribution Tax Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Federal_Withholding_Amount__c</fullName>
        <description>This field is optional. It is the net, externally-calculated dollar amount of federal withholding to print on the distribution or election form, including the standard 10%, as applicable, applied to the distribution subtotal, plus any discretionary additional dollar amount or percentage.</description>
        <inlineHelpText>The net dollar amount of Federal Withholding, including the standard 10% applied to the distribution subtotal</inlineHelpText>
        <label>Federal Withholding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HSA_Distribution_Type__c</fullName>
        <description>This field is optional. It is a picklist that specifies the type of distribution for a Health Savings Account (HSA).</description>
        <inlineHelpText>Specifies the type of distribution for a Health Savings Account (HSA).</inlineHelpText>
        <label>HSA Distribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Death - Estate Beneficiary - Distribution is in Year of Death</fullName>
                </value>
                <value>
                    <fullName>Death - Estate Beneficiary - Distribution is After Year of Death</fullName>
                </value>
                <value>
                    <fullName>Death - Other Beneficiary - Distribution is in Year of Death</fullName>
                </value>
                <value>
                    <fullName>Death - Other Beneficiary - Distribution is After Year of Death</fullName>
                </value>
                <value>
                    <fullName>Transfer to my HSA</fullName>
                </value>
                <value>
                    <fullName>Transfer to spouse&apos;s HSA due to death</fullName>
                </value>
                <value>
                    <fullName>Transfer to former spouse&apos;s HSA due to divorce or legal separation</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Prohibited Transaction</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution by my tax-filing due date</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution - after my tax-filing due date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_10_Withholdings_Election__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. If true, the IRA owner elects to have 10% federal income tax withheld from their IRA distribution.</description>
        <inlineHelpText>If true the IRA owner elects to have 10% Federal income tax withheld from their IRA distribution.</inlineHelpText>
        <label>IRA 10% Withholdings Election</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Addtl_Federal_Withholdings_Amt__c</fullName>
        <description>This field is optional. It is the additional dollar amount (over and above the 10% federal income tax withholding) that the IRA owner will have withheld from each distribution.</description>
        <inlineHelpText>The additional dollar amount (over and above the 10% Federal income tax withholding) that the IRA owner will have withheld from each distribution.</inlineHelpText>
        <label>IRA Additional Federal Withholdings Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Addtl_Federal_Withholdings_Pct__c</fullName>
        <description>This field is optional. It is the additional percentage (over and above the 10% federal income tax withholding) that the IRA owner will have withheld from each distribution.</description>
        <inlineHelpText>The additional percentage (over and above the 10% Federal income tax withholding) that the IRA owner will have withheld from each distribution.</inlineHelpText>
        <label>IRA Additional Federal Withholdings Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Contribution_Date__c</fullName>
        <description>This field is optional. It is the date of the IRA contribution.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date of the IRA contribution.</inlineHelpText>
        <label>IRA Contribution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Distribution_Date__c</fullName>
        <description>This field is optional. It is the date of the IRA distribution.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date of the IRA distribution.</inlineHelpText>
        <label>IRA Distribution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Distribution_Type__c</fullName>
        <description>This field is optional. It is a picklist that specifies the type of distribution for a Traditional Beneficiary or Roth Beneficiary IRA.</description>
        <inlineHelpText>Specifies the type of distribution for a Traditional Beneficiary or Roth Beneficiary IRA.</inlineHelpText>
        <label>IRA Distribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>IRS Levy</fullName>
                </value>
                <value>
                    <fullName>Revocation</fullName>
                </value>
                <value>
                    <fullName>Prohibited Transaction</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution - On or before my tax-filing due date in the same year as excess contribution</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution - On or before my tax-filing due date in the year after excess contribution</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution - After my tax-filing due date</fullName>
                </value>
                <value>
                    <fullName>Recharacterization (Roth Beneficiary only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_State_Withholdings_Amount__c</fullName>
        <description>This field is optional. It is the dollar amount which the IRA owner elects to have withheld from their IRA distribution for state income tax purposes.</description>
        <inlineHelpText>The dollar amount which the IRA owner elects to have withheld from their IRA distribution for state income tax purposes.</inlineHelpText>
        <label>IRA State Withholdings Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_State_Withholdings_Percent__c</fullName>
        <description>This field is optional. It is the percentage that the IRA owner elects to have withheld from their IRA distribution for state income tax purposes.</description>
        <inlineHelpText>The percentage that the IRA owner elects to have withheld from their IRA distribution for state income tax purposes.</inlineHelpText>
        <label>IRA State Withholdings Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Transfer_Source__c</fullName>
        <description>Users populate this optional picklist field with the source of the funds for transfer.</description>
        <inlineHelpText>Optional: specify the source of the funds for transfer.</inlineHelpText>
        <label>IRA Transfer Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional</fullName>
                </value>
                <value>
                    <fullName>SIMPLE</fullName>
                </value>
                <value>
                    <fullName>HSA</fullName>
                </value>
                <value>
                    <fullName>MSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__IRS_Levy_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. If true, the distribution is related to an IRS levy. This is only applicable to Traditional IRAs, SIMPLE IRAs, and Health Savings Accounts (HSAs). The other types of IRAs have a separate distribution type that are used for IRS levies.</description>
        <inlineHelpText>If true the distribution is related to an IRS levy. This is only applicable to Traditional IRAs SIMPLE IRAs and Health Savings Accounts (HSAs); the other types of IRA have a separate distribution type that would be used for IRS levies.</inlineHelpText>
        <label>IRS Levy Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Investment_Amount__c</fullName>
        <description>This field is optional. It is the amount of the deposit investment.</description>
        <inlineHelpText>The amount of the deposit investment.</inlineHelpText>
        <label>Investment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Investment_Delivery_Type__c</fullName>
        <description>This field is optional. It is a picklist that specifies the way in which the requested investment should be sent.</description>
        <inlineHelpText>Specifies the way in which the requested investment should be sent.</inlineHelpText>
        <label>Investment Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash Proceeds</fullName>
                </value>
                <value>
                    <fullName>In Kind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Investment_Description__c</fullName>
        <description>This field is optional. It describes the type of investment.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describes the type of investment.</inlineHelpText>
        <label>Investment Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Investment_Is_Non_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. If true, this is a non-deposit investment.</description>
        <inlineHelpText>If true this is a non-deposit investment.</inlineHelpText>
        <label>Investment is Non-Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Investment_Request_Date__c</fullName>
        <description>This field is optional. It is the date that the specified investment is requested to be sent and/or liquified.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date that the specified investment is requested to be sent and/or liquefied.</inlineHelpText>
        <label>Investment Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Approved__c</fullName>
        <description>--DEPRECATED-- Determines if the status of the request is approved.</description>
        <formula>ISPICKVAL(LLC_BI__Status__c, &quot;Approved&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>-D Is Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Disbursement_Request__c</fullName>
        <description>This field is optional. It determines if the transaction request type is disbursement.</description>
        <formula>ISPICKVAL(LLC_BI__Type__c, &quot;Disbursement&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Disbursement Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Submitted__c</fullName>
        <description>--DEPRECATED-- Determines if the transaction request status is submitted.</description>
        <formula>ISPICKVAL(LLC_BI__Status__c, &quot;Submitted&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>-D Is Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and can be auto-populated. It creates a lookup to the loan related to this transaction request.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Transaction Requests</relationshipLabel>
        <relationshipName>Transaction_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>